/**
* @Indexed
*/
message KObject {
	/* @Field(index=Index.YES, analyze = Analyze.NO, store = Store.YES) */
	required int32 aField = 1;
	/* @Field(index=Index.YES, analyze = Analyze.NO, store = Store.YES) */
	required string anotherField = 2;
}