package org.appformer;

/**
* @Indexed
*/
message KObject {

	/* @Field(index=Index.YES, analyze = Analyze.NO, store = Store.YES) */
	required int32 embedded = 1;

	/* @Field(index=Index.YES, analyze = Analyze.NO, store = Store.YES) */
	required string anotherEmbedded = 2;
}